<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_availability_notification_title">Install/Update/Enable Google Play services</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="app_name">INSToolkit+</string>
    <string name="app_desc">Attitude indicator with altitude and velocity indicators; ground track with sub-meter position accuracy; sensor outputs.</string>
    <string name="lookup_calibrate">Calibrate Sensors</string>
    <string name="lookup_about">About</string>
    <string name="lookup_settings">Settings</string>
    <string name="lookup_horizon">Artificial Horizon</string>
    <string name="lookup_hud">HeadUp Display</string>
    <string name="lookup_groundtrack">Ground Track</string>
    <string name="lookup_plot">Data plots</string>
    <string name="data_menu_file">Save Plots to file</string>
    <string name="data_menu_record">Record data</string>
    <string name="data_menu_record_start">Start Logging</string>
    <string name="data_menu_record_stop">Stop Logging</string>
    <string name="data_menu_next">Next Plots</string>
    <string name="data_menu_previous">Previous Plots</string>
    <string name="opts_disp_metrics">Units</string>
    <string name="opts_disp_metrics_desc">Units for distance and velocity.</string>
    <string name="opts_instrument">Instruments</string>
    <string name="opts_instrument_desc">Selection of instruments to plot.</string>
    <string name="opts_sampling">Sampling period</string>
    <string name="opts_sampling_desc">Sampling period [s] for plotting and saving to file. (The number of points is limited to prevent excessive memory usage)</string>
    <string name="opts_fullscreen">Fullscreen</string>
    <string name="opts_fullscreen_desc">Hide status bar to allow fullscreen. Require restarting the application.</string>
    <string name="opts_bodyaxes">Body axes</string>
    <string name="opts_bodyaxes_desc" />
    <string name="opts_cov_angle">Angles Covariance</string>
    <string name="opts_cov_angle_desc">Measurement covariance noise [rad2].</string>
    <string name="opts_cov_omg">Augular Velocity Covariance</string>
    <string name="opts_cov_omg_desc">Measurement covariance noise [rad2/s2].</string>
    <string name="opts_cov_pos">GPS Position Covariance</string>
    <string name="opts_cov_pos_desc">Measurement covariance noise [m2].</string>
    <string name="opts_cov_vel">GPS Velocity Covariance</string>
    <string name="opts_cov_vel_desc">Measurement covariance noise [m2/s2].</string>
    <string name="opts_acc_cov">Accelerometers Covariance</string>
    <string name="opts_acc_cov_desc">Measurement covariance noise [m2/s4]</string>
    <string name="opts_compas_cov">Mag. Compass Covariance</string>
    <string name="opts_compas_cov_desc">Measurement covariance noise [rad2]</string>
    <string name="opts_gps">GPS</string>
    <string name="opts_gps_desc">Indicate whether GPS data are used to update the position and the velocity.</string>
    <string name="opts_freq">Kalman Filter Frequency</string>
    <string name="opts_freq_desc">Frequency Update of the Kalman Filter. [Hz]</string>
    <string name="opts_power">Power</string>
    <string name="opts_power_desc">Overall power consumption with change of the sensors sampling rate.</string>
    <string name="lookup_sensors">Sensors</string>
    <string name="opts_sensors_desc">List of onboard sensors.</string>
    <string name="name_prompt">Enter a Value</string>
    <string name="AboutStr">Use an extended Kalman filter with partial information from accelerometers and, gyroscopes, magnetometers and GPS if available.</string>
    <string name="disclaimer_text">"The application computes the attitude of the device and presents an artificial horizon, an altimeter, a vertical speed indicator, and a compass. For best performances, accelerometers, gyroscopes and magnetometers must be present on the device.
 An optional location device (GPS or an other subsystem) is useful for best estimation of position and velocity. WGS84 is used for the Earth ellipsoid model.
 Sub-meter accuracy is possible when all necessary devices are present thanks to the implementation of an Extended Kalman Filter (EKF). The EKF estimates attitude (orientation using quaternions), position and velocity.

 Author: Joris ."</string>
    <string name="warning">The application is provided as-is, without any warranty. The application is not certified for navigation purposes by any agency or organisation.</string>
    <string name="msg_gps">"GPS is disabled. You need GPS for position and velocity estimations.
Do you want to enable it?"</string>
    <string name="msg_wifi">"Wifi is disabled. You need Wifi to connect to send data packets with UDP.
Do you want to enable it?"</string>
    <string name="mapKey">0lalzP_5j_LfXFMY4qBTPPqQ79N2v2bHBmi__VA</string>
    <string name="mapKeyDbg">0lalzP_5j_LcfXILyi6zNYzB5b8iPGBDH-ffCpw</string>
    <string name="lookup_pitchset">Set Zero-Pitch</string>
    <string name="lookup_help">Help</string>
    <string name="lookup_logging">Start Logging</string>
    <string name="lookup_notlogging">Stop Logging</string>
    <string name="lookup_compass">Compass</string>
    <string name="lookup_infoboard">Data Board</string>
    <string name="btn_ground_reset">Reset</string>
    <string name="btn_ground_marker">Marker</string>
    <string name="btn_ground_distance">Distance</string>
    <string name="btn_ground_map">Map</string>
    <string name="opts_layout">Layout</string>
    <string name="opts_layout_desc">Layout for large screen</string>
    <string name="opts_resetpitch">Reset Zero-Pitch</string>
    <string name="opts_resetpitch_desc">Reset the neutral position for pitch</string>
    <string name="opts_landscape">Landscape mode</string>
    <string name="opts_landscape_desc">Use landscape mode. This does not change the sensors coordinate frame. (Require restarting the application)</string>
    <string name="opts_googlemap">Google Map</string>
    <string name="opts_googlemap_desc">Show Google maps instead.</string>
    <string name="opts_position">Filter Position</string>
    <string name="opts_position_desc">If enable, use accelerometers and GPS to provide position estimate. Otherwise, use GPS readings only.</string>
    <string name="opts_filter">Filter</string>
    <string name="opts_filter_desc">Select the filter: Extended or Unscented Kalman filter, improving accuracy/performance under some conditions.</string>
    <string name="opts_paramcov">Covariance</string>
    <string name="opts_paramcov_desc">Select the covariance settings.</string>
    <string name="opts_fileformat">Output file format</string>
    <string name="opts_fileformat_desc">Format of the output text file.</string>
    <string name="opts_udp">UDP</string>
    <string name="opts_udp_desc">Enabling sending date with UDP.</string>
    <string name="opts_udpport">UDP port</string>
    <string name="opts_udpport_desc">Set up the UDP server port (0 to 65535).</string>
    <string name="opts_udpaddress">UDP server address</string>
    <string name="opts_udpaddress_desc">Set up the target UDP address (e.g., 192.168.1.1).</string>
    <string name="instructions">Add an image. Then press on image to drag it. Drop it on the grid.</string>
    <string name="hello">Add an image. Then drag it onto the grid.</string>

    
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
