<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="right" android:orientation="vertical" android:id="@id/mylayout1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:layout_gravity="right" android:id="@id/Button01" android:background="@drawable/custom_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="50.0dip" android:text="@string/btn_ground_reset" />
    <Button android:layout_gravity="right" android:id="@id/Button03" android:background="@drawable/custom_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="50.0dip" android:text="@string/btn_ground_distance" android:layout_below="@id/Button01" />
    <Button android:layout_gravity="right" android:id="@id/Button04" android:background="@drawable/custom_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="50.0dip" android:text="@string/btn_ground_map" android:layout_below="@id/Button03" />
</RelativeLayout>